--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.hmmelton.textrack" >
+          package="com.hmmelton.courseback" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:name=".TextRackApplication"
+        android:name="com.hmmelton.courseback.TextRackApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +17,7 @@
             android:value="@string/facebook_id" />
 
         <activity
-            android:name="com.hmmelton.textrack.MainActivity"
+            android:name="com.hmmelton.courseback.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.hmmelton.textrack.SignInActivity"
+            android:name="com.hmmelton.courseback.SignInActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/SignInTheme"
             android:screenOrientation="portrait">
