--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.google.guava:guava:18.0'
